# otava-test-data

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: publish.yml
docs/: api.md  benchmark.md  conf.py  development.md  generators.md  index.md  visualizer.md
scripts/: take_screenshots.py
src/otava_test_data/: __init__.py  cli.py
src/otava_test_data/generators/: __init__.py  advanced.py  basic.py  combiner.py
src/otava_test_data/tests/: __init__.py  test_generators.py  test_otava_integration.py
src/otava_test_data/web/: __init__.py  main.py
src/otava_test_data/web/static/css/: style.css
src/otava_test_data/web/static/js/: app.js
src/otava_test_data/web/templates/: index.html
